// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`environment_Test renders correctly 1`] = `
<div
  className="environment-container"
>
  <div
    className="draggable-title "
  >
    <h2>
      Environment
    </h2>
    <div
      className="move-button"
    >
      <svg
        fill="currentColor"
        height={30}
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width={30}
      >
        <g>
          <path
            d="m29.5 13.8c-0.6-0.6-1.7-0.6-2.3 0s-0.7 1.7 0 2.4l2.1 2.1h-7.6v-7.6l2.1 2.1c0.3 0.4 0.8 0.5 1.2 0.5s0.9-0.1 1.2-0.5c0.6-0.6 0.6-1.7 0-2.3l-6.2-6.2-6.2 6.2c-0.6 0.6-0.6 1.7 0 2.3s1.7 0.7 2.4 0l2.1-2.1v7.6h-7.6l2.1-2.1c0.7-0.7 0.7-1.7 0-2.4s-1.7-0.6-2.3 0l-6.2 6.2 6.2 6.2c0.3 0.3 0.7 0.5 1.2 0.5s0.8-0.2 1.1-0.5c0.7-0.7 0.7-1.7 0-2.4l-2.1-2.1h7.6v7.6l-2.1-2.1c-0.7-0.7-1.7-0.7-2.4 0s-0.6 1.7 0 2.3l6.2 6.2 6.2-6.2c0.6-0.6 0.6-1.7 0-2.3s-1.7-0.7-2.4 0l-2.1 2.1v-7.6h7.6l-2.1 2.1c-0.7 0.7-0.7 1.7 0 2.4 0.3 0.3 0.7 0.5 1.1 0.5s0.9-0.2 1.2-0.5l6.2-6.2-6.2-6.2z"
          />
        </g>
      </svg>
    </div>
    
  </div>
  <div
    className="table-wrapper"
  >
    <table>
      <tbody>
        <tr
          onClick={[Function]}
        >
          <td
            className="telemetry-name"
          >
            Temperature
          </td>
          <td>
            89.6
            ºF / 
            32.0
            ºC
          </td>
          <td
            className="hidden"
          >
            <div
              className="plot-div"
            >
              <div
                className="line-chart-0d9539ca89eea486f5d380a95a10c12779436913"
              >
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": ".line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .pie-chart-slice{stroke: #fff;
                    stroke-width: 1;
                    opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .pie-chart-slice:hover{opacity: 0.8;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .pie-chart-label{font-family: sans-serif;
                    font-size: 12px;
                    text-anchor: middle;
                    fill: #000;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .bar{fill: blue;
                    transition: x 0.35s ease-in, y 0.35s ease-in, height 0.5s ease-in, width 0.5s ease-in;
                    opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .bar:hover{opacity: 0.8;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .line{fill: none;
                    stroke-width: 1.5;
                    opacity: 0.7;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .line:hover{opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .area{opacity: 0.7;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .area:hover{opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .dot{stroke-width: 0;
                    opacity: 0.85;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in, r 0.5s ease-in;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .dot:hover{opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 circle.data-point{r: 4px;
                    opacity: 0.7;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 circle.data-point:hover{r: 6px;
                    opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 circle.tick-circle{r: 2px;
                    fill: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .x circle.tick-circle{cy: 8px;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis{font-family: dobra-light,Arial,sans-serif;
                    font-size: 9px;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis .label{font: 14px arial;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis path,.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis line{fill: none;
                    stroke-width: 1;
                    shape-rendering: crispEdges;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 x.axis path{display: none;
                    stroke: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .tick line{stroke: lightgrey;
                    stroke-width: 1;
                    opacity: 0.7;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .x circle.tick-circle{fill: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .y circle.tick-circle{cx: -8px;
                    fill: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .y.axis line{display: none;
                    stroke: lightgrey;}",
                    }
                  }
                />
                <svg
                  height={100}
                  style={Object {}}
                  width={450}
                >
                  <g
                    style={Object {}}
                    transform="translate(70, 10)"
                  >
                    <g
                      className="x axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="middle"
                      transform="translate(0, 60)"
                    >
                      <path
                        className="domain"
                        d="M0.5,0V0.5H350.5V0"
                        stroke="#000"
                        style={Object {}}
                      />
                    </g>
                    <g
                      className="y axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="end"
                      transform="translate(0, 0)"
                    >
                      <path
                        className="domain"
                        d="M-6,60.5H0.5V0.5H-6"
                        stroke="#000"
                        style={Object {}}
                      />
                      <text
                        className="label"
                        dy=".9em"
                        style={
                          Object {
                            "textAnchor": "end",
                          }
                        }
                        transform="rotate(-90)"
                        x={0}
                        y={-70}
                      >
                        ºC
                      </text>
                    </g>
                    <g
                      className="lineChart"
                      style={Object {}}
                    >
                      <path
                        className="line"
                        style={
                          Object {
                            "stroke": "red",
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="telemetry-name"
          >
            Humidity
          </td>
          <td>
            57.0
            %
          </td>
          <td
            className="hidden"
          >
            <div
              className="plot-div"
            >
              <div
                className="line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99"
              >
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": ".line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .pie-chart-slice{stroke: #fff;
                    stroke-width: 1;
                    opacity: 1;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .pie-chart-slice:hover{opacity: 0.8;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .pie-chart-label{font-family: sans-serif;
                    font-size: 12px;
                    text-anchor: middle;
                    fill: #000;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .bar{fill: blue;
                    transition: x 0.35s ease-in, y 0.35s ease-in, height 0.5s ease-in, width 0.5s ease-in;
                    opacity: 1;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .bar:hover{opacity: 0.8;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .line{fill: none;
                    stroke-width: 1.5;
                    opacity: 0.7;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .line:hover{opacity: 1;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .area{opacity: 0.7;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .area:hover{opacity: 1;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .dot{stroke-width: 0;
                    opacity: 0.85;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in, r 0.5s ease-in;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .dot:hover{opacity: 1;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 circle.data-point{r: 4px;
                    opacity: 0.7;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 circle.data-point:hover{r: 6px;
                    opacity: 1;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 circle.tick-circle{r: 2px;
                    fill: lightgrey;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .x circle.tick-circle{cy: 8px;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .axis{font-family: dobra-light,Arial,sans-serif;
                    font-size: 9px;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .axis .label{font: 14px arial;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .axis path,.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .axis line{fill: none;
                    stroke-width: 1;
                    shape-rendering: crispEdges;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 x.axis path{display: none;
                    stroke: lightgrey;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .tick line{stroke: lightgrey;
                    stroke-width: 1;
                    opacity: 0.7;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .x circle.tick-circle{fill: lightgrey;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .y circle.tick-circle{cx: -8px;
                    fill: lightgrey;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .y.axis line{display: none;
                    stroke: lightgrey;}",
                    }
                  }
                />
                <svg
                  height={100}
                  style={Object {}}
                  width={450}
                >
                  <g
                    style={Object {}}
                    transform="translate(70, 10)"
                  >
                    <g
                      className="x axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="middle"
                      transform="translate(0, 60)"
                    >
                      <path
                        className="domain"
                        d="M0.5,0V0.5H350.5V0"
                        stroke="#000"
                        style={Object {}}
                      />
                    </g>
                    <g
                      className="y axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="end"
                      transform="translate(0, 0)"
                    >
                      <path
                        className="domain"
                        d="M-6,60.5H0.5V0.5H-6"
                        stroke="#000"
                        style={Object {}}
                      />
                      <text
                        className="label"
                        dy=".9em"
                        style={
                          Object {
                            "textAnchor": "end",
                          }
                        }
                        transform="rotate(-90)"
                        x={0}
                        y={-70}
                      >
                        %
                      </text>
                    </g>
                    <g
                      className="lineChart"
                      style={Object {}}
                    >
                      <path
                        className="line"
                        style={
                          Object {
                            "stroke": "red",
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="telemetry-name"
          >
            Pressure
          </td>
          <td>
            770.0
             mmHg
          </td>
          <td
            className="hidden"
          >
            <div
              className="plot-div"
            >
              <div
                className="line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572"
              >
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": ".line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .pie-chart-slice{stroke: #fff;
                    stroke-width: 1;
                    opacity: 1;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .pie-chart-slice:hover{opacity: 0.8;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .pie-chart-label{font-family: sans-serif;
                    font-size: 12px;
                    text-anchor: middle;
                    fill: #000;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .bar{fill: blue;
                    transition: x 0.35s ease-in, y 0.35s ease-in, height 0.5s ease-in, width 0.5s ease-in;
                    opacity: 1;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .bar:hover{opacity: 0.8;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .line{fill: none;
                    stroke-width: 1.5;
                    opacity: 0.7;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .line:hover{opacity: 1;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .area{opacity: 0.7;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .area:hover{opacity: 1;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .dot{stroke-width: 0;
                    opacity: 0.85;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in, r 0.5s ease-in;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .dot:hover{opacity: 1;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 circle.data-point{r: 4px;
                    opacity: 0.7;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 circle.data-point:hover{r: 6px;
                    opacity: 1;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 circle.tick-circle{r: 2px;
                    fill: lightgrey;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .x circle.tick-circle{cy: 8px;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .axis{font-family: dobra-light,Arial,sans-serif;
                    font-size: 9px;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .axis .label{font: 14px arial;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .axis path,.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .axis line{fill: none;
                    stroke-width: 1;
                    shape-rendering: crispEdges;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 x.axis path{display: none;
                    stroke: lightgrey;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .tick line{stroke: lightgrey;
                    stroke-width: 1;
                    opacity: 0.7;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .x circle.tick-circle{fill: lightgrey;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .y circle.tick-circle{cx: -8px;
                    fill: lightgrey;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .y.axis line{display: none;
                    stroke: lightgrey;}",
                    }
                  }
                />
                <svg
                  height={100}
                  style={Object {}}
                  width={450}
                >
                  <g
                    style={Object {}}
                    transform="translate(70, 10)"
                  >
                    <g
                      className="x axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="middle"
                      transform="translate(0, 60)"
                    >
                      <path
                        className="domain"
                        d="M0.5,0V0.5H350.5V0"
                        stroke="#000"
                        style={Object {}}
                      />
                    </g>
                    <g
                      className="y axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="end"
                      transform="translate(0, 0)"
                    >
                      <path
                        className="domain"
                        d="M-6,60.5H0.5V0.5H-6"
                        stroke="#000"
                        style={Object {}}
                      />
                      <text
                        className="label"
                        dy=".9em"
                        style={
                          Object {
                            "textAnchor": "end",
                          }
                        }
                        transform="rotate(-90)"
                        x={0}
                        y={-70}
                      >
                        mmHg
                      </text>
                    </g>
                    <g
                      className="lineChart"
                      style={Object {}}
                    >
                      <path
                        className="line"
                        style={
                          Object {
                            "stroke": "red",
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="telemetry-name"
          >
            Precipitation
          </td>
          <td>
            1.0
            mm
          </td>
          <td
            className="hidden"
          >
            <div
              className="plot-div"
            >
              <div
                className="line-chart-46e95594646a0f00e692bcfd15569f43c859fe89"
              >
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": ".line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .pie-chart-slice{stroke: #fff;
                    stroke-width: 1;
                    opacity: 1;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .pie-chart-slice:hover{opacity: 0.8;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .pie-chart-label{font-family: sans-serif;
                    font-size: 12px;
                    text-anchor: middle;
                    fill: #000;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .bar{fill: blue;
                    transition: x 0.35s ease-in, y 0.35s ease-in, height 0.5s ease-in, width 0.5s ease-in;
                    opacity: 1;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .bar:hover{opacity: 0.8;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .line{fill: none;
                    stroke-width: 1.5;
                    opacity: 0.7;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .line:hover{opacity: 1;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .area{opacity: 0.7;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .area:hover{opacity: 1;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .dot{stroke-width: 0;
                    opacity: 0.85;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in, r 0.5s ease-in;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .dot:hover{opacity: 1;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 circle.data-point{r: 4px;
                    opacity: 0.7;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 circle.data-point:hover{r: 6px;
                    opacity: 1;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 circle.tick-circle{r: 2px;
                    fill: lightgrey;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .x circle.tick-circle{cy: 8px;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .axis{font-family: dobra-light,Arial,sans-serif;
                    font-size: 9px;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .axis .label{font: 14px arial;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .axis path,.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .axis line{fill: none;
                    stroke-width: 1;
                    shape-rendering: crispEdges;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 x.axis path{display: none;
                    stroke: lightgrey;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .tick line{stroke: lightgrey;
                    stroke-width: 1;
                    opacity: 0.7;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .x circle.tick-circle{fill: lightgrey;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .y circle.tick-circle{cx: -8px;
                    fill: lightgrey;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .y.axis line{display: none;
                    stroke: lightgrey;}",
                    }
                  }
                />
                <svg
                  height={100}
                  style={Object {}}
                  width={450}
                >
                  <g
                    style={Object {}}
                    transform="translate(70, 10)"
                  >
                    <g
                      className="x axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="middle"
                      transform="translate(0, 60)"
                    >
                      <path
                        className="domain"
                        d="M0.5,0V0.5H350.5V0"
                        stroke="#000"
                        style={Object {}}
                      />
                    </g>
                    <g
                      className="y axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="end"
                      transform="translate(0, 0)"
                    >
                      <path
                        className="domain"
                        d="M-6,60.5H0.5V0.5H-6"
                        stroke="#000"
                        style={Object {}}
                      />
                      <text
                        className="label"
                        dy=".9em"
                        style={
                          Object {
                            "textAnchor": "end",
                          }
                        }
                        transform="rotate(-90)"
                        x={0}
                        y={-70}
                      >
                        mm
                      </text>
                    </g>
                    <g
                      className="lineChart"
                      style={Object {}}
                    >
                      <path
                        className="line"
                        style={
                          Object {
                            "stroke": "red",
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="telemetry-name"
          >
            Dew Point
          </td>
          <td>
            33.8
            ºF / 
            1.0
            ºC
          </td>
          <td
            className="hidden"
          >
            <div
              className="plot-div"
            >
              <div
                className="line-chart-0d9539ca89eea486f5d380a95a10c12779436913"
              >
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": ".line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .pie-chart-slice{stroke: #fff;
                    stroke-width: 1;
                    opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .pie-chart-slice:hover{opacity: 0.8;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .pie-chart-label{font-family: sans-serif;
                    font-size: 12px;
                    text-anchor: middle;
                    fill: #000;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .bar{fill: blue;
                    transition: x 0.35s ease-in, y 0.35s ease-in, height 0.5s ease-in, width 0.5s ease-in;
                    opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .bar:hover{opacity: 0.8;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .line{fill: none;
                    stroke-width: 1.5;
                    opacity: 0.7;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .line:hover{opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .area{opacity: 0.7;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .area:hover{opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .dot{stroke-width: 0;
                    opacity: 0.85;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in, r 0.5s ease-in;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .dot:hover{opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 circle.data-point{r: 4px;
                    opacity: 0.7;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 circle.data-point:hover{r: 6px;
                    opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 circle.tick-circle{r: 2px;
                    fill: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .x circle.tick-circle{cy: 8px;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis{font-family: dobra-light,Arial,sans-serif;
                    font-size: 9px;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis .label{font: 14px arial;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis path,.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis line{fill: none;
                    stroke-width: 1;
                    shape-rendering: crispEdges;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 x.axis path{display: none;
                    stroke: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .tick line{stroke: lightgrey;
                    stroke-width: 1;
                    opacity: 0.7;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .x circle.tick-circle{fill: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .y circle.tick-circle{cx: -8px;
                    fill: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .y.axis line{display: none;
                    stroke: lightgrey;}",
                    }
                  }
                />
                <svg
                  height={100}
                  style={Object {}}
                  width={450}
                >
                  <g
                    style={Object {}}
                    transform="translate(70, 10)"
                  >
                    <g
                      className="x axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="middle"
                      transform="translate(0, 60)"
                    >
                      <path
                        className="domain"
                        d="M0.5,0V0.5H350.5V0"
                        stroke="#000"
                        style={Object {}}
                      />
                    </g>
                    <g
                      className="y axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="end"
                      transform="translate(0, 0)"
                    >
                      <path
                        className="domain"
                        d="M-6,60.5H0.5V0.5H-6"
                        stroke="#000"
                        style={Object {}}
                      />
                      <text
                        className="label"
                        dy=".9em"
                        style={
                          Object {
                            "textAnchor": "end",
                          }
                        }
                        transform="rotate(-90)"
                        x={0}
                        y={-70}
                      >
                        ºC
                      </text>
                    </g>
                    <g
                      className="lineChart"
                      style={Object {}}
                    >
                      <path
                        className="line"
                        style={
                          Object {
                            "stroke": "red",
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`environment_Test renders correctly when temperature is not passed 1`] = `
<div
  className="environment-container"
>
  <div
    className="draggable-title "
  >
    <h2>
      Environment
    </h2>
    <div
      className="move-button"
    >
      <svg
        fill="currentColor"
        height={30}
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width={30}
      >
        <g>
          <path
            d="m29.5 13.8c-0.6-0.6-1.7-0.6-2.3 0s-0.7 1.7 0 2.4l2.1 2.1h-7.6v-7.6l2.1 2.1c0.3 0.4 0.8 0.5 1.2 0.5s0.9-0.1 1.2-0.5c0.6-0.6 0.6-1.7 0-2.3l-6.2-6.2-6.2 6.2c-0.6 0.6-0.6 1.7 0 2.3s1.7 0.7 2.4 0l2.1-2.1v7.6h-7.6l2.1-2.1c0.7-0.7 0.7-1.7 0-2.4s-1.7-0.6-2.3 0l-6.2 6.2 6.2 6.2c0.3 0.3 0.7 0.5 1.2 0.5s0.8-0.2 1.1-0.5c0.7-0.7 0.7-1.7 0-2.4l-2.1-2.1h7.6v7.6l-2.1-2.1c-0.7-0.7-1.7-0.7-2.4 0s-0.6 1.7 0 2.3l6.2 6.2 6.2-6.2c0.6-0.6 0.6-1.7 0-2.3s-1.7-0.7-2.4 0l-2.1 2.1v-7.6h7.6l-2.1 2.1c-0.7 0.7-0.7 1.7 0 2.4 0.3 0.3 0.7 0.5 1.1 0.5s0.9-0.2 1.2-0.5l6.2-6.2-6.2-6.2z"
          />
        </g>
      </svg>
    </div>
    
  </div>
  <div
    className="table-wrapper"
  >
    <table>
      <tbody>
        <tr
          onClick={[Function]}
        >
          <td
            className="telemetry-name"
          >
            Temperature
          </td>
          <td>
            Unavailable
          </td>
          <td
            className="hidden"
          >
            <div
              className="plot-div"
            >
              <div
                className="line-chart-0d9539ca89eea486f5d380a95a10c12779436913"
              >
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": ".line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .pie-chart-slice{stroke: #fff;
                    stroke-width: 1;
                    opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .pie-chart-slice:hover{opacity: 0.8;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .pie-chart-label{font-family: sans-serif;
                    font-size: 12px;
                    text-anchor: middle;
                    fill: #000;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .bar{fill: blue;
                    transition: x 0.35s ease-in, y 0.35s ease-in, height 0.5s ease-in, width 0.5s ease-in;
                    opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .bar:hover{opacity: 0.8;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .line{fill: none;
                    stroke-width: 1.5;
                    opacity: 0.7;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .line:hover{opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .area{opacity: 0.7;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .area:hover{opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .dot{stroke-width: 0;
                    opacity: 0.85;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in, r 0.5s ease-in;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .dot:hover{opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 circle.data-point{r: 4px;
                    opacity: 0.7;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 circle.data-point:hover{r: 6px;
                    opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 circle.tick-circle{r: 2px;
                    fill: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .x circle.tick-circle{cy: 8px;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis{font-family: dobra-light,Arial,sans-serif;
                    font-size: 9px;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis .label{font: 14px arial;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis path,.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis line{fill: none;
                    stroke-width: 1;
                    shape-rendering: crispEdges;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 x.axis path{display: none;
                    stroke: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .tick line{stroke: lightgrey;
                    stroke-width: 1;
                    opacity: 0.7;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .x circle.tick-circle{fill: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .y circle.tick-circle{cx: -8px;
                    fill: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .y.axis line{display: none;
                    stroke: lightgrey;}",
                    }
                  }
                />
                <svg
                  height={100}
                  style={Object {}}
                  width={450}
                >
                  <g
                    style={Object {}}
                    transform="translate(70, 10)"
                  >
                    <g
                      className="x axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="middle"
                      transform="translate(0, 60)"
                    >
                      <path
                        className="domain"
                        d="M0.5,0V0.5H350.5V0"
                        stroke="#000"
                        style={Object {}}
                      />
                    </g>
                    <g
                      className="y axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="end"
                      transform="translate(0, 0)"
                    >
                      <path
                        className="domain"
                        d="M-6,60.5H0.5V0.5H-6"
                        stroke="#000"
                        style={Object {}}
                      />
                      <text
                        className="label"
                        dy=".9em"
                        style={
                          Object {
                            "textAnchor": "end",
                          }
                        }
                        transform="rotate(-90)"
                        x={0}
                        y={-70}
                      >
                        ºC
                      </text>
                    </g>
                    <g
                      className="lineChart"
                      style={Object {}}
                    >
                      <path
                        className="line"
                        style={
                          Object {
                            "stroke": "red",
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="telemetry-name"
          >
            Humidity
          </td>
          <td>
            57.0
            %
          </td>
          <td
            className="hidden"
          >
            <div
              className="plot-div"
            >
              <div
                className="line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99"
              >
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": ".line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .pie-chart-slice{stroke: #fff;
                    stroke-width: 1;
                    opacity: 1;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .pie-chart-slice:hover{opacity: 0.8;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .pie-chart-label{font-family: sans-serif;
                    font-size: 12px;
                    text-anchor: middle;
                    fill: #000;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .bar{fill: blue;
                    transition: x 0.35s ease-in, y 0.35s ease-in, height 0.5s ease-in, width 0.5s ease-in;
                    opacity: 1;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .bar:hover{opacity: 0.8;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .line{fill: none;
                    stroke-width: 1.5;
                    opacity: 0.7;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .line:hover{opacity: 1;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .area{opacity: 0.7;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .area:hover{opacity: 1;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .dot{stroke-width: 0;
                    opacity: 0.85;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in, r 0.5s ease-in;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .dot:hover{opacity: 1;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 circle.data-point{r: 4px;
                    opacity: 0.7;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 circle.data-point:hover{r: 6px;
                    opacity: 1;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 circle.tick-circle{r: 2px;
                    fill: lightgrey;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .x circle.tick-circle{cy: 8px;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .axis{font-family: dobra-light,Arial,sans-serif;
                    font-size: 9px;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .axis .label{font: 14px arial;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .axis path,.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .axis line{fill: none;
                    stroke-width: 1;
                    shape-rendering: crispEdges;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 x.axis path{display: none;
                    stroke: lightgrey;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .tick line{stroke: lightgrey;
                    stroke-width: 1;
                    opacity: 0.7;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .x circle.tick-circle{fill: lightgrey;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .y circle.tick-circle{cx: -8px;
                    fill: lightgrey;}.line-chart-6b8b2ba2b741ad379a2bc57c490c1aabe9391f99 .y.axis line{display: none;
                    stroke: lightgrey;}",
                    }
                  }
                />
                <svg
                  height={100}
                  style={Object {}}
                  width={450}
                >
                  <g
                    style={Object {}}
                    transform="translate(70, 10)"
                  >
                    <g
                      className="x axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="middle"
                      transform="translate(0, 60)"
                    >
                      <path
                        className="domain"
                        d="M0.5,0V0.5H350.5V0"
                        stroke="#000"
                        style={Object {}}
                      />
                    </g>
                    <g
                      className="y axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="end"
                      transform="translate(0, 0)"
                    >
                      <path
                        className="domain"
                        d="M-6,60.5H0.5V0.5H-6"
                        stroke="#000"
                        style={Object {}}
                      />
                      <text
                        className="label"
                        dy=".9em"
                        style={
                          Object {
                            "textAnchor": "end",
                          }
                        }
                        transform="rotate(-90)"
                        x={0}
                        y={-70}
                      >
                        %
                      </text>
                    </g>
                    <g
                      className="lineChart"
                      style={Object {}}
                    >
                      <path
                        className="line"
                        style={
                          Object {
                            "stroke": "red",
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="telemetry-name"
          >
            Pressure
          </td>
          <td>
            770.0
             mmHg
          </td>
          <td
            className="hidden"
          >
            <div
              className="plot-div"
            >
              <div
                className="line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572"
              >
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": ".line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .pie-chart-slice{stroke: #fff;
                    stroke-width: 1;
                    opacity: 1;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .pie-chart-slice:hover{opacity: 0.8;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .pie-chart-label{font-family: sans-serif;
                    font-size: 12px;
                    text-anchor: middle;
                    fill: #000;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .bar{fill: blue;
                    transition: x 0.35s ease-in, y 0.35s ease-in, height 0.5s ease-in, width 0.5s ease-in;
                    opacity: 1;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .bar:hover{opacity: 0.8;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .line{fill: none;
                    stroke-width: 1.5;
                    opacity: 0.7;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .line:hover{opacity: 1;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .area{opacity: 0.7;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .area:hover{opacity: 1;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .dot{stroke-width: 0;
                    opacity: 0.85;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in, r 0.5s ease-in;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .dot:hover{opacity: 1;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 circle.data-point{r: 4px;
                    opacity: 0.7;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 circle.data-point:hover{r: 6px;
                    opacity: 1;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 circle.tick-circle{r: 2px;
                    fill: lightgrey;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .x circle.tick-circle{cy: 8px;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .axis{font-family: dobra-light,Arial,sans-serif;
                    font-size: 9px;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .axis .label{font: 14px arial;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .axis path,.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .axis line{fill: none;
                    stroke-width: 1;
                    shape-rendering: crispEdges;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 x.axis path{display: none;
                    stroke: lightgrey;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .tick line{stroke: lightgrey;
                    stroke-width: 1;
                    opacity: 0.7;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .x circle.tick-circle{fill: lightgrey;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .y circle.tick-circle{cx: -8px;
                    fill: lightgrey;}.line-chart-7f52487d06cc09ee64797ed13f994d07d39f8572 .y.axis line{display: none;
                    stroke: lightgrey;}",
                    }
                  }
                />
                <svg
                  height={100}
                  style={Object {}}
                  width={450}
                >
                  <g
                    style={Object {}}
                    transform="translate(70, 10)"
                  >
                    <g
                      className="x axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="middle"
                      transform="translate(0, 60)"
                    >
                      <path
                        className="domain"
                        d="M0.5,0V0.5H350.5V0"
                        stroke="#000"
                        style={Object {}}
                      />
                    </g>
                    <g
                      className="y axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="end"
                      transform="translate(0, 0)"
                    >
                      <path
                        className="domain"
                        d="M-6,60.5H0.5V0.5H-6"
                        stroke="#000"
                        style={Object {}}
                      />
                      <text
                        className="label"
                        dy=".9em"
                        style={
                          Object {
                            "textAnchor": "end",
                          }
                        }
                        transform="rotate(-90)"
                        x={0}
                        y={-70}
                      >
                        mmHg
                      </text>
                    </g>
                    <g
                      className="lineChart"
                      style={Object {}}
                    >
                      <path
                        className="line"
                        style={
                          Object {
                            "stroke": "red",
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="telemetry-name"
          >
            Precipitation
          </td>
          <td>
            1.0
            mm
          </td>
          <td
            className="hidden"
          >
            <div
              className="plot-div"
            >
              <div
                className="line-chart-46e95594646a0f00e692bcfd15569f43c859fe89"
              >
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": ".line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .pie-chart-slice{stroke: #fff;
                    stroke-width: 1;
                    opacity: 1;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .pie-chart-slice:hover{opacity: 0.8;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .pie-chart-label{font-family: sans-serif;
                    font-size: 12px;
                    text-anchor: middle;
                    fill: #000;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .bar{fill: blue;
                    transition: x 0.35s ease-in, y 0.35s ease-in, height 0.5s ease-in, width 0.5s ease-in;
                    opacity: 1;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .bar:hover{opacity: 0.8;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .line{fill: none;
                    stroke-width: 1.5;
                    opacity: 0.7;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .line:hover{opacity: 1;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .area{opacity: 0.7;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .area:hover{opacity: 1;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .dot{stroke-width: 0;
                    opacity: 0.85;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in, r 0.5s ease-in;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .dot:hover{opacity: 1;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 circle.data-point{r: 4px;
                    opacity: 0.7;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 circle.data-point:hover{r: 6px;
                    opacity: 1;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 circle.tick-circle{r: 2px;
                    fill: lightgrey;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .x circle.tick-circle{cy: 8px;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .axis{font-family: dobra-light,Arial,sans-serif;
                    font-size: 9px;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .axis .label{font: 14px arial;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .axis path,.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .axis line{fill: none;
                    stroke-width: 1;
                    shape-rendering: crispEdges;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 x.axis path{display: none;
                    stroke: lightgrey;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .tick line{stroke: lightgrey;
                    stroke-width: 1;
                    opacity: 0.7;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .x circle.tick-circle{fill: lightgrey;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .y circle.tick-circle{cx: -8px;
                    fill: lightgrey;}.line-chart-46e95594646a0f00e692bcfd15569f43c859fe89 .y.axis line{display: none;
                    stroke: lightgrey;}",
                    }
                  }
                />
                <svg
                  height={100}
                  style={Object {}}
                  width={450}
                >
                  <g
                    style={Object {}}
                    transform="translate(70, 10)"
                  >
                    <g
                      className="x axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="middle"
                      transform="translate(0, 60)"
                    >
                      <path
                        className="domain"
                        d="M0.5,0V0.5H350.5V0"
                        stroke="#000"
                        style={Object {}}
                      />
                    </g>
                    <g
                      className="y axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="end"
                      transform="translate(0, 0)"
                    >
                      <path
                        className="domain"
                        d="M-6,60.5H0.5V0.5H-6"
                        stroke="#000"
                        style={Object {}}
                      />
                      <text
                        className="label"
                        dy=".9em"
                        style={
                          Object {
                            "textAnchor": "end",
                          }
                        }
                        transform="rotate(-90)"
                        x={0}
                        y={-70}
                      >
                        mm
                      </text>
                    </g>
                    <g
                      className="lineChart"
                      style={Object {}}
                    >
                      <path
                        className="line"
                        style={
                          Object {
                            "stroke": "red",
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="telemetry-name"
          >
            Dew Point
          </td>
          <td>
            33.8
            ºF / 
            1.0
            ºC
          </td>
          <td
            className="hidden"
          >
            <div
              className="plot-div"
            >
              <div
                className="line-chart-0d9539ca89eea486f5d380a95a10c12779436913"
              >
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": ".line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .pie-chart-slice{stroke: #fff;
                    stroke-width: 1;
                    opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .pie-chart-slice:hover{opacity: 0.8;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .pie-chart-label{font-family: sans-serif;
                    font-size: 12px;
                    text-anchor: middle;
                    fill: #000;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .bar{fill: blue;
                    transition: x 0.35s ease-in, y 0.35s ease-in, height 0.5s ease-in, width 0.5s ease-in;
                    opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .bar:hover{opacity: 0.8;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .line{fill: none;
                    stroke-width: 1.5;
                    opacity: 0.7;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .line:hover{opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .area{opacity: 0.7;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .area:hover{opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .dot{stroke-width: 0;
                    opacity: 0.85;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in, r 0.5s ease-in;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .dot:hover{opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 circle.data-point{r: 4px;
                    opacity: 0.7;
                    transition: cx 0.35s ease-in, cy 0.35s ease-in;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 circle.data-point:hover{r: 6px;
                    opacity: 1;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 circle.tick-circle{r: 2px;
                    fill: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .x circle.tick-circle{cy: 8px;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis{font-family: dobra-light,Arial,sans-serif;
                    font-size: 9px;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis .label{font: 14px arial;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis path,.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .axis line{fill: none;
                    stroke-width: 1;
                    shape-rendering: crispEdges;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 x.axis path{display: none;
                    stroke: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .tick line{stroke: lightgrey;
                    stroke-width: 1;
                    opacity: 0.7;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .x circle.tick-circle{fill: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .y circle.tick-circle{cx: -8px;
                    fill: lightgrey;}.line-chart-0d9539ca89eea486f5d380a95a10c12779436913 .y.axis line{display: none;
                    stroke: lightgrey;}",
                    }
                  }
                />
                <svg
                  height={100}
                  style={Object {}}
                  width={450}
                >
                  <g
                    style={Object {}}
                    transform="translate(70, 10)"
                  >
                    <g
                      className="x axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="middle"
                      transform="translate(0, 60)"
                    >
                      <path
                        className="domain"
                        d="M0.5,0V0.5H350.5V0"
                        stroke="#000"
                        style={Object {}}
                      />
                    </g>
                    <g
                      className="y axis"
                      fill="none"
                      fontFamily="sans-serif"
                      fontSize={10}
                      style={Object {}}
                      textAnchor="end"
                      transform="translate(0, 0)"
                    >
                      <path
                        className="domain"
                        d="M-6,60.5H0.5V0.5H-6"
                        stroke="#000"
                        style={Object {}}
                      />
                      <text
                        className="label"
                        dy=".9em"
                        style={
                          Object {
                            "textAnchor": "end",
                          }
                        }
                        transform="rotate(-90)"
                        x={0}
                        y={-70}
                      >
                        ºC
                      </text>
                    </g>
                    <g
                      className="lineChart"
                      style={Object {}}
                    >
                      <path
                        className="line"
                        style={
                          Object {
                            "stroke": "red",
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
